# intuitive

./: .gitignore  .rustfmt.toml  Cargo.toml  changelog.md  logging.txt  notes.md  readme.md  shell.nix  todo.md
crusty/: Cargo.toml  notes.md
crusty/src/: element.rs  error.rs  lib.rs
crusty/src/components/: embed.rs  empty.rs  mod.rs  section.rs
crusty/src/components/modal/: hook.rs  mod.rs
crusty/src/components/table/: alignment.rs  mod.rs  widget.rs
crusty/src/event/: handler.rs
crusty/src/macros/: mod.rs
crusty/src/state/: hook.rs  mod.rs
crusty_macros/: Cargo.toml
crusty_macros/src/: lib.rs
examples/: Cargo.toml  readme.md
examples/examples/: basic.rs  complex_layout.rs  component_macro.rs  hooks.rs  readme_demo.rs  unmount.rs  watch.rs
examples/src/: lib.rs
intuitive/: Cargo.toml  notes.md
intuitive/src/: element.rs  error.rs  lib.rs  logging.txt  spans.rs  style.rs  terminal.rs  text.rs
intuitive/src/buffer/: draw.rs  mod.rs  region.rs
intuitive/src/components/: any.rs  centered.rs  children.rs  embed.rs  empty.rs  fixed.rs  mod.rs  padding.rs  section.rs  stack.rs  text.rs
intuitive/src/components/experimental/: mod.rs
intuitive/src/components/experimental/modal/: hook.rs  mod.rs
intuitive/src/components/experimental/scroll/: mod.rs
intuitive/src/components/experimental/table/: alignment.rs  mod.rs  widget.rs
intuitive/src/components/experimental_components/: input.rs  mod.rs
intuitive/src/components/experimental_components/modal/: hook.rs  mod.rs
intuitive/src/components/experimental_components/scroll/: mod.rs
intuitive/src/components/modal/: hook.rs  mod.rs
intuitive/src/components/stack/: flex.rs  horizontal.rs  mod.rs  vertical.rs
intuitive/src/components/text/: alignment.rs  component.rs  input.rs  mod.rs
intuitive/src/draw/: buffer.rs  context.rs  mod.rs  region.rs
intuitive/src/element/: any.rs  empty.rs  mod.rs
intuitive/src/event/: channel.rs  handler.rs  mod.rs
intuitive/src/macros/: mod.rs  on_key.rs  render.rs
intuitive/src/render/: context.rs  manager.rs  mod.rs
intuitive/src/render/hooks/: error.rs  mod.rs  use_effect.rs  use_effect_with_deps.rs  use_memo.rs  use_state.rs
intuitive/src/render/hooks/manager/: cursor.rs  error.rs  mod.rs
intuitive/src/render/providers/: components.rs  descendants.rs  elements.rs  logging.txt  mod.rs
intuitive/src/render/providers/hooks/: cursor.rs  mod.rs
intuitive/src/state/: hook.rs  manager.rs  mod.rs  state.rs
intuitive/src/style/: mod.rs
intuitive/src/utils/: array.rs  geometry.rs  layout.rs  mod.rs  provider.rs
intuitive_macros/: Cargo.toml
intuitive_macros/src/: component.rs  lib.rs  on_key.rs  render.rs
macros/: Cargo.toml  readme.md
macros/src/: component.rs  lib.rs  on_key.rs  render.rs  utils.rs
macros/src/component/: mod.rs
macros/src/render/: mod.rs
macros/src/render/component/: children.rs  mod.rs  params.rs
src/: element.rs  error.rs  lib.rs  terminal.rs
src/components/: any.rs  centered.rs  children.rs  embed.rs  empty.rs  mod.rs  section.rs  text.rs
src/components/modal/: hook.rs  mod.rs
src/components/stack/: flex.rs  horizontal.rs  mod.rs  vertical.rs
src/event/: channel.rs  handler.rs  mod.rs
src/macros/: render.rs
src/state/: hook.rs  manager.rs  mod.rs  pre_render.rs  state.rs
