[package]
name = "intuitive"
version = "0.2.2"
description = "a library for building declarative text-based user interfaces"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/intuitive"

[dependencies]
crossterm = "0.25.0"
intuitive_macros = { path = "../intuitive_macros", version = "0.2" }
ctrlc = { version = "3.2.3", features = [ "termination" ] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serial_test = "0.9"
thiserror = "1.0.32"
tui = "0.18.0"
