[package]
name = "intuitive"
version = "0.7.0-alpha.0"
description = "a library for building declarative text-based user interfaces"
license = "CC0-1.0"
repository = "https://github.com/enricozb/intuitive"
readme = "readme.md"
edition = "2021"

[dependencies]
crossterm = "0.25.0"
intuitive_macros = { path = "../macros", version = "0.7.0-alpha.0" }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serial_test = "0.9"
thiserror = "1.0.37"
