[package]
name = "intuitive_macros"
version = "0.3.0"
description = "the component proc-macro for the intuitive crate"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/intuitive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
