[package]
name = "intuitive_macros"
version = "0.4.0"
description = "the component proc-macro for the intuitive crate"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/intuitive"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.43"
proc-macro-crate = "1.2.1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
